test/deca/context/invalid/2_9_param_void.deca
// Description:
//    parametres de type void
//
// Resultats:
//    Ligne 8

class A {
   void truc(void a)  {

   }
}
